# langforge-os

./: .gitignore  README.md  main.py  name.txt  pyproject.toml  requirements.txt  test.py
.github/workflows/: ci.yml
langforge_os/: graph.py  tools.py  utils.py
langforge_os/utils/: utils.py
tests/: test_tools.py
