[tool.poetry]
name = "langforge-os"
version = "0.1.0"
description = "An LLM OS project micvitc."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain-ollama = "^0.2.0"
langgraph = "^0.2.22"
numpy = "^2.1.1"
tqdm = "^4.66.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
